--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ぱ～てぃてーぶるめーかー</a>
+          <a class="navbar-brand" href="#">PokemonPT-TableMaker</a>
         </div>
       </div>
     </nav>
@@ -42,24 +42,23 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <center>ぱ～てぃてーぶるめーかー</center>
         <div style="margin:0px;padding:0px;" align="center">
           <table width="300px" id="javascript_sample_table_1" style="border-collapse: collapse;border:2px double #000000;background-color:#FFFFFF;color:#000000;text-align:left;">
             <thead>
               <tr>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">ポケモン</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">特性</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">持ち物</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技1</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技2</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技3</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">技4</th>
-                <th style="border:2px double #000000;background-color:#FFDEA4;color:#000000;text-align:center;">備考</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">ポケモン</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">特性</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">持ち物</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">技1</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">技2</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">技3</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">技4</th>
+                <th style="border:2px double #000000;background-color:#4a98af;color:#000000;text-align:center;color:#fff;">備考</th>
               </tr>
             </thead>
             <tbody id="javascript_sample_table_1_tbody">
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="10" maxlength="6" id ="name1"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name1" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
@@ -67,6 +66,16 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
+              </tr>
+              <tr>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
               </tr>
               <tr>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
@@ -79,14 +88,14 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
               </tr>
               <tr>
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
@@ -99,37 +108,45 @@
                 <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
               </tr>
               <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-              </tr>
-              <tr>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
-                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="6" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="12" maxlength="10" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
+                <td style="border:2px double #000000;text-align:left;"><input type="text" name="name" size="10" maxlength="8" style="background-color:#e5f1f4"></td>
               </tr>
             </tbody>
           </table>
         </div>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </br>
         <center>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="koshin()">出力&raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="koshin()">出力</a></p>
         </center>
         <center>
-          <textarea NAME="ResultArea" id="txtArea_javascript_sample_table_1"></textarea>
+          <textarea cols="120" NAME="ResultArea" id="txtArea_javascript_sample_table_1"></textarea>
         </center>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a>
+          <div class="contents" >
+            <center>
+              <ul class="pop_btn"  align="center">
+                <li>
+                  <h2><a href="http://gutaradn.blog119.fc2.com/">Blog</a></h2>
+                </li>
+                <li>
+                  <h2><a href="https://twitter.com/Utao_Bot_poke">構築BOT</a></h2>
+                </li>
+                <li>
+                  <h2><a href="https://twitter.com/rei_zeru250">管理人</a></h2>
+                </li>
+                <li>
+                  <h2><a href="https://twitter.com/share" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a></h2>
+                </li>
+              </ul>
+            </center>
+          </div>
       </div>
-    </div>
     </body>
 </html>
