--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <center>
               <ul class="pop_btn"  align="center">
                 <li>
-                  <h2><a href="http://gutaradn.blog119.fc2.com/">Blog</a></h2>
+                  <h2><a href="http://gutaradn.blog119.fc2.com/">Blogaaa</a></h2>
                 </li>
                 <li>
                   <h2><a href="https://twitter.com/Utao_Bot_poke">構築BOT</a></h2>
