--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <h2><a href="https://twitter.com/rei_zeru250">管理人</a></h2>
                 </li>
                 <li>
-                  <h2><a href="https://twitter.com/share" data-url="http://reizeru.github.io/PTTableMaker/" data-text="Pokemon PTTableMaker" data-via="rei_zeru250">Tweet</a></h2>
+                  <h2><a href="https://docs.google.com/forms/d/1wHIGDpxY7GK2ly4VS7fIC38RZY2yJlLH5qTo_p8MILE/viewform">宣伝する</a></h2>
                 </li>
               </ul>
             </center>
